--- a/exercise/exercise-2.html
+++ b/exercise/exercise-2.html
@@ -5,23 +5,29 @@
 </html>
 
 <script>
+
 async function getTitle() {
+
+  function createAll (type){
+    return document.createElement(type)
+  }
+
     const response = await fetch(
       "https://jsonplaceholder.typicode.com/todos/4"
     );
     const todo = await response.json();
 
-    const title = document.createElement("h2");
+    const title = createAll("h2")
     title.textContent = `Todo: ${todo.title}`;
 
-    const completed = document.createElement("input");
-    completed.type = "checkbox";
-    completed.checked = todo.completed;
-    completed.disabled = true;
+    const box = createAll("input")
+    box.type = "checkbox";
+    box.checked = todo.completed;
+    box.disabled = true;
 
     const container = document.getElementById("container");
     container.appendChild(title);
-    container.appendChild(completed);
+    container.appendChild(box);
   }
 
   getTitle();
